refactor: update end-point
